# freelance

./: .env  config.py  main.py  pyproject.toml
model/: __init__.py  database.py  users.py
routers/: __init__.py  business_owner.py  education.py  freelance.py  project.py  users.py
schemas/: freelance.py  users.py
