[tool.poetry]
name = "freelance"
version = "0.1.0"
description = ""
authors = ["Safaraliyev05 <uzblordsardorboy0705@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
